# dbt8

./: .gitignore  CMakeLists.txt  Containerfile.appimage  Makefile.cmake  README.rst
appimage/: AppRun.in  org.osdl.dbt8.appdata.xml  org.osdl.dbt8.desktop
scripts/: CMakeLists.txt  dbt8-get-config.in  dbt8-load-test.in  dbt8-plot-results.in  dbt8-post-process.in  dbt8-power-test.in  dbt8-report.in  dbt8-run.in  dbt8.in
scripts/pgsql/: CMakeLists.txt  dbt8-pgsql-create-db.in  dbt8-pgsql-create-tables.in  dbt8-pgsql-drop-tables.in  dbt8-pgsql-get-query-time.in  dbt8-pgsql-load-data.in  dbt8-pgsql-run-stream.in  dbt8-pgsql-start-db.in  dbt8-pgsql-stop-db.in  dbt8-pgsql-time-statistics.in
tools/: build-appimage  build-appimage-container
